tests/expectations/compiler/dyn_record/dyn_record_assign_field_fail.out
Error [ETYC0372117]: Expected an assignable struct or record but type `dyn record` was found.
    --> compiler-test:3:9
     |
   3 |         r.balance = 100u64;
     |         ^
